--- a/alexwiss/templates/base.html
+++ b/alexwiss/templates/base.html
@@ -22,13 +22,15 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   </head>
   <body>
-    <div class="navbar navbar-default">
+    <div class="navbar navbar-default navbar-inverse">
       <div class="container">
         <div class="navbar-header">
-          <div class="navbar-brand">Bookshelf</div>
+          <div class="navbar-brand">Alex Wiss</div>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
+		  <li><a href="/resume">Resume</a></li>
+		  <li><a href="/projects">Projects</a></li>
         </ul>
       </div>
     </div>
