--- a/alexwiss/templates/projects.html
+++ b/alexwiss/templates/projects.html
@@ -18,27 +18,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3>{{action}} book</h3>
-
-  <div class="form-group">
-    <label for="title">Resume</label>
-    <input type="text" name="resume" id="resume" value="Dummy" class="form-control"/>
-  </div>
-
-  <div class="form-group">
-    <label for="author">Author</label>
-    <input type="text" name="author" id="author" value="Dummy" class="form-control"/>
-  </div>
-
-  <div class="form-group">
-    <label for="publishedDate">Date Published</label>
-    <input type="text" name="publishedDate" id="publishedDate" value="Dummy" class="form-control"/>
-  </div>
-
-  <div class="form-group">
-    <label for="description">Description</label>
-    <textarea name="description" id="description" class="form-control">This is a description</textarea>
-  </div>
+<div class="page-header">
+	<h3>Projects <small>Some of the things I'm working on</small></h3>
+</div>
+<div class="panel panel-primary">
+	<div class="panel-heading">This website!</div>
+	<div class="panel-body">
+	This website is built with Python using the Flask and Bootstrap frameworks. You can check it out on <a href="https://github.com/alexwisswolf/alexwiss.com">Github</a>.
+	</div>
+</div>
 
 {% endblock %}
 {# [END form] #}
