Adding the projects page.

--- a/alexwiss/templates/projects.html
+++ b/alexwiss/templates/projects.html
@@ -28,5 +28,12 @@
 	</div>
 </div>
 
+<div class="panel panel-primary">
+	<div class="panel-heading">Spotify Summary</div>
+	<div class="panel-body">
+	A page that provides some information about Spotify listening using the API. Found <a href="/spotify">here</a>.
+	</div>
+</div>
+
 {% endblock %}
 {# [END form] #}
